tests/cases/ownership/ok/ownership-aggregate-field-access.ari
struct Holder {
  token: own i64,
  mut count: i64,
}

fn make_owned(value: i64) -> own i64 {
  return value;
}

fn main() -> i64 {
  var holder = Holder { token: make_owned(5), count: 1 };
  holder.count = holder.count + 6;
  let result = holder.count;
  drop holder;
  return result;
}
