tests/cases/ownership/errors/ownership-aggregate-partial-move.ari
struct Holder {
  token: own i64,
  count: i64,
}

fn make_owned(value: i64) -> own i64 {
  return value;
}

fn consume(value: Holder) -> i64 {
  drop value;
  return 0;
}

fn main() -> i64 {
  let holder = Holder { token: make_owned(1), count: 2 };
  let token = holder.token;
  let result = consume(holder);
  drop token;
  return result;
}
